# ows-rs

./: .gitignore  .gitmodules  Cargo.toml  OwnershipModel.md  ReadMe.md
examples/: hello.rs
src/: geometry.rs  gfx.rs  handler.rs  key.rs  lib.rs  macros.rs  mouse.rs  window.rs
src/display/: mod.rs
src/display/wayland/: mod.rs  window.rs  xkeyboard.rs
src/display/win32/: keymap.rs  mod.rs
src/platform/: mod.rs
src/platform/win32platform/: mod.rs
src/platform/xcbplatform/: mod.rs  xcbkeyboard.rs
src/render/: frame.rs  mod.rs
