[package]
name = "ows"
version = "0.1.0"
authors = ["Remi THEBAULT <remi.thebault@gmail.com>"]

[dependencies]
libc = "0.2"
log = "0.3"

[target.'cfg(target_os="linux")'.dependencies]
x11 = "2.3"
xcb = { version = "0.7", features = ["xlib_xcb", "dri2", "xkb"] }
xkbcommon = { version = "0.2", features = ["x11"] }

[target.'cfg(target_os="windows")'.dependencies]
winapi = "0.2"
user32-sys = "0.1"
kernel32-sys = "0.2"
