[package]
name = "ows"
version = "0.1.0"
authors = ["Remi Thebault <remi.thebault@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.0"

[target.'cfg(unix)'.dependencies]
wayland-client = { version="0.21.10" }
wayland-protocols = { version="0.21.10", features=["client"] }

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version="0.3.6", features=["libloaderapi", "winuser"] }
libc = { version="0.2", features=["align"] }
