[package]
name = "ows"
version = "0.1.0"
authors = ["Remi Thebault <remi.thebault@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.0"
gfx-hal = { path="gfx/src/hal" }
gfx-backend-vulkan = { path="gfx/src/backend/vulkan", features=[] }
libc = { version="0.2", features=["align"] }

[target.'cfg(unix)'.dependencies]
wayland-client = { version="0.21.10", features=["native_lib"] }
wayland-protocols = { version="0.21.10", features=["client"] }
xkbcommon = { version="0.4.0", features=["wayland"] }

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version="0.3.6", features=["libloaderapi", "windowsx", "winuser"] }
